FEAT(script.js): add 2nd canvas & add background star field to it

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       You have two lasers to use to destroy obstacles.  Press space to fire a laser.<br />
       Use your lasers wisely, once they're gone they're gone.
     </p>
-    <canvas id="canvas" width="800" height="400"></canvas>
+    <div id = "canvases">
+      <canvas id="back" width="800" height="400"></canvas>
+      <canvas id="play_area" width="800" height="400"></canvas>
+    </div>
+    
   </body>
 </html>
